# hackathon-snmp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Justfile  README.md  TODO.md  findings.md  pyproject.toml  walk_laptop.sh
.claude/: settings.json
.claude/hooks/: normalize-git-c.py
.github/workflows/: actions-security.yml  deploy-oidviz.yml  oidtrace-ci.yml  oidviz-ci.yml  traceformat-ci.yml
.playwright-mcp/: page-2026-06-16T04-47-31-271Z.yml  page-2026-06-16T04-48-10-725Z.yml  page-2026-06-16T04-49-13-705Z.yml  page-2026-06-16T04-49-48-760Z.yml  page-2026-06-16T04-50-04-107Z.yml  page-2026-06-16T04-50-29-292Z.yml  page-2026-06-16T04-50-49-961Z.yml  page-2026-06-16T04-51-56-667Z.yml  page-2026-06-16T04-52-13-650Z.yml  page-2026-06-18T10-14-46-966Z.yml  page-2026-06-18T10-17-56-486Z.yml
docs/: deploy-and-test-diagnose.md  oidviz.md  snmp-trouble-shooting.md  trace-format.md  trace-format.schema.json
docs/dev-guidelines/: web-conventions.md  web-guardrails.md
docs/rfcs/: rfc1157.txt  rfc1321.txt  rfc3412.txt  rfc3414.txt  rfc3416.txt  rfc7860.txt
docs/superpowers/: visual-qa-prompt.md
docs/superpowers/plans/: 2026-06-08-slow-oid-detection-engine.md  2026-06-08-test-infrastructure.md  2026-06-09-snmpv3-authnopriv.md  2026-06-09-sse-diagnose-streaming.md  2026-06-11-oidtrace.md  2026-06-12-traceformat.md  2026-06-15-oidviz.md  2026-06-25-oidtrace-snmp-versions-cli.md  2026-06-26-oidtrace-snmp-v1.md  2026-06-26-oidtrace-snmpv3-authnopriv.md  2026-06-26-oidtrace-snmpv3-noauthnopriv.md  2026-07-06-oidviz-vue-component-tests.md  2026-07-07-oidtrace-executable-spec-migration.md  2026-07-08-oidviz-streaming-parser.md  2026-07-10-github-actions-ci-hardening.md  2026-07-21-oid-standard-name-map.md
docs/superpowers/specs/: 2026-06-08-slow-oid-detection-design.md  2026-06-08-test-infrastructure-design.md  2026-06-09-snmpv3-authnopriv-design.md  2026-06-09-sse-diagnose-streaming-design.md  2026-06-11-doctor-mvp-design.md  2026-06-11-oidemu-design.md  2026-06-11-oidsense-design.md  2026-06-11-oidtrace-architecture-design.md  2026-06-11-oidviz-design.md  2026-06-12-traceformat-design.md  2026-06-15-oidviz-review-findings.md  2026-06-15-oidviz-spec.md  2026-06-16-oidviz-filter-display-change-proposal.md  2026-06-25-oidtrace-snmp-versions-cli-design.md  2026-06-26-oidtrace-snmpv3-noauthnopriv.md  2026-06-29-sha256-auth-implementation-plan.md  2026-07-06-oidviz-vue-component-tests-design.md  2026-07-08-oidviz-streaming-parser-design.md  2026-07-10-github-actions-ci-hardening-design.md  2026-07-21-oid-standard-name-map-design.md
emulator/: Containerfile  Justfile  main.py  mibs.py  pods.yaml  pyproject.toml  snmp_emulator.py  start-containers.sh
emulator/emulator/: __init__.py  _core.py  _mibs.py
emulator/tests/: conftest.py  test_emulator.py
experiments/: 2026-06-11-poc-roundtrip-results.md  2026-06-11-trace-format-perf-results.md  poc_roundtrip.py  trace_format_perf.py
oidtrace/: .pre-commit-config.yaml  .vulture-whitelist.py  Justfile  README.md  pyproject.toml  walk_ap.sh
oidtrace/src/oidtrace/: __init__.py  auth.py  ber.py  cli.py  codec.py  oid.py  records.py  system_info.py  tracefile.py  transport.py  violations.py  vocab.py  walker.py
oidtrace/tests/: conftest.py
oidtrace/tests/integration/: conftest.py  test_cli.py  test_emulator_smoke.py  test_reference_tools.py  test_transport.py  test_walker.py
oidtrace/tests/robot/: OidtraceLibrary.py  spec_cli.robot  spec_crash_safety.robot  spec_rfc3414.robot  spec_rfc3416.robot  spec_rfc7860.robot  spec_rfc7860_reference.robot  spec_system_info.robot
oidtrace/tests/support/: emulator.py
oidtrace/tests/unit/: test_auth.py  test_ber.py  test_codec_decode.py  test_codec_encode.py  test_codec_v3_decode.py  test_codec_v3_encode.py  test_codec_v3_fuzz.py  test_oid.py  test_records.py  test_smoke.py  test_tracefile.py  test_violations.py  test_vocab.py  test_walker_logic.py
oidviz/: .gitignore  .oxlintrc.json  .pre-commit-config.yaml  Justfile  README.md  biome.json  eslint.config.mjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
oidviz/docs/: spec.md  web-guardrails.md
oidviz/prototypes/: 01-verdict.html  02-waterfall.html  03-subtree.html  04-detail.html  05-app.html  index.html  perf-test.html  waterfall-v1-oid-tree-explorer.html  waterfall-v5-minimap-detail.html  waterfall-v7-incident-stack.html
oidviz/scripts/: gen-trace-validator.mjs  gen_oid_names.py
oidviz/src/: App.vue  app.css  env.d.ts  main.ts
oidviz/src/components/: AppSidebar.vue  FindingsByCategory.vue  IncidentModal.vue  IncidentStack.vue  LandingScreen.vue  MinimapDetail.vue  OidTree.vue  Sidebar.vue
oidviz/src/composables/: useMinimapDetail.ts  useVirtualScroll.ts
oidviz/src/lib/: filters.ts  findings.ts  incidentStack.ts  minimapDraw.ts  model.ts  oidNames.gen.ts  oidNames.ts  oidTrie.ts  parser.worker.ts  traceValidator.gen.d.ts  traceValidator.gen.js  types.gen.ts  utils.ts  virtualScroll.ts
oidviz/tests/component/: App.test.ts  CLAUDE.md  LandingScreen.test.ts  (+6 more)
oidviz/tools/: gen_focused_trace.py  gen_trace.py  perf_test.ts
traceformat/: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  trace-format.md  trace-format.schema.json
traceformat/examples/: write_minimal_trace.py
traceformat/tests/: test_roundtrip.py  test_schema_parity.py  test_smoke.py  test_vocab.py
trouble-shooter/: Justfile  main.py  prof.html  prof.json  pyproject.toml
trouble-shooter/src/trouble_shooter/: main.py
trouble-shooter/src/trouble_shooter/detector/: __init__.py  classify.py  engine.py  models.py  prober.py
trouble-shooter/static/: app.js  demo1-waterfall.html  demo2-heatmap.html  demo3-flamegraph.html  diagnose.html  index.html  prefs.js  style.css
trouble-shooter/tests/: conftest.py  test_check.py  test_emulator.py  test_walk.py
trouble-shooter/tests/integration/: conftest.py  test_api_diagnose.py  test_check.py  test_prober.py  test_walk.py
trouble-shooter/tests/unit/: conftest.py  test_classify.py  test_emulator.py  test_engine.py  test_prober_bulk_walk.py
(+27 files in other folders)
