[project]
name = "emulator"
version = "0.1.0"
description = "SNMP device emulator"
requires-python = "==3.14.2"
dependencies = [
    "pysnmp>=7.1.27",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # allow assert in tests

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
min-severity="warn"
preset="strict"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
