[project]
name = "emulator"
version = "0.1.0"
description = "SNMP device emulator"
requires-python = "==3.14.2"
dependencies = [
    "pysnmp>=7.1.27",
]

[tool.ruff]
extend = "../pyproject.toml"
target-version = "py314"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # allow assert in tests

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
min-severity="warn"
preset="strict"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-pyasn1>=0.6.0.20260408",
]
