[project]
name = "emulator"
version = "0.1.0"
description = "SNMP device emulator"
requires-python = "==3.14.2"
dependencies = [
    "pysnmp>=7.1.27",
]

[tool.ruff]
extend = "../pyproject.toml"
target-version = "py314"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # allow assert in tests

[tool.ruff.lint]
extend-ignore = ["ASYNC109"] # timeout param passed to pysnmp transport layer, not asyncio.timeout

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
min-severity="warn"
preset="strict"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--random-order"

[dependency-groups]
dev = [
    "types-pyasn1>=0.6.0.20260408",
    "pytest",
    "pytest-asyncio>=1.4.0",
    "pytest-random-order",
]
