[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oidtrace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["traceformat"]

[project.scripts]
oidtrace = "oidtrace.cli:main"

[tool.uv.sources]
traceformat = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "jsonschema>=4",
    "pysnmp>=6",
    "ruff>=0.9",
    "pyrefly>=1.0",
    "pyright>=1.1",
    "pytest-cov>=7.1.0",
    "vulture>=2.16",
    "hypothesis>=6.155.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oidtrace"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "RUF", "ASYNC", "TC", "PTH", "PL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "PLR0913"]
"src/oidtrace/violations.py" = ["PLR0913"]
"src/oidtrace/records.py" = ["PLR0913"]
"src/oidtrace/walker.py" = ["PLR0912", "PLR0913", "PLR0915"]

[tool.pyrefly]
project_includes = ["src", "tests"]
search_path = ["src", "."]
python_interpreter = "../.venv/bin/python3"

[tool.pyright]
venvPath = ".."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "reference_tools: needs net-snmp CLI tools on PATH",
]
