[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oidtrace"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["traceformat"]

[project.scripts]
oidtrace = "oidtrace.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "jsonschema>=4",
    "pysnmp>=6",
    "hypothesis>=6",
    "ruff>=0.9",
    "pyrefly>=1.0",
    "pyright>=1.1",
    "vulture>=2",
    "robotframework>=7",
]

[tool.uv.sources]
traceformat = {workspace = true}

[tool.hatch.build.targets.wheel]
packages = ["src/oidtrace"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "RUF", "ASYNC", "TC", "PTH", "PL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.pyrefly]
project_includes = ["src", "tests"]
search_path = ["src", "."]
python_interpreter = "../.venv/bin/python3"
preset = "strict"

[tool.pyright]
venvPath = ".."
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["reference_tools: requires net-snmp tools installed on the system"]

[tool.coverage.run]
branch = true
source = ["oidtrace", "traceformat"]

[tool.coverage.report]
fail_under = 98
