[project]
name = "trouble-shooter"
version = "0.1.0"
description = "SNMP Troubleshooter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pysnmp>=7.1.27",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "emulator",
    "pytest",
    "httpx2",
    "pyinstrument>=5.1.2",
]

[tool.uv.sources]
emulator = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["main.py"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
    "main.py"
]
min-severity="warn"
preset="strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
