[project]
name = "trouble-shooter"
version = "0.1.0"
description = "SNMP Troubleshooter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pysnmp>=7.1.27",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "emulator",
    "pytest",
    "httpx2",
    "pyinstrument>=5.1.2",
    "types-pyasn1>=0.6.0.20260408",
    "pytest-asyncio>=1.4.0",
    "pytest-random-order",
]

[tool.uv.sources]
emulator = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--random-order"


[tool.hatch.build.targets.wheel]
packages = ["src/trouble_shooter"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
min-severity="warn"
preset="strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../pyproject.toml"
target-version = "py314"

[tool.ruff.lint]
ignore = [
    "S603",    # subprocess with trusted input — host is validated before call
    "S104",    # binding to all interfaces — intentional for dev server
    "ASYNC109", # timeout param passed to pysnmp transport layer, not asyncio.timeout
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # allow assert in tests
